// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiBreadcrumbs is rendered 1`] = `
<nav
  aria-label="aria-label"
  class="euiBreadcrumbs testClass1 testClass2 euiBreadcrumbs--truncate euiBreadcrumbs--responsive"
  data-test-subj="test subject string"
>
  <a
    class="euiLink euiLink--subdued euiBreadcrumb customClass"
    data-test-subj="breadcrumbsAnimals"
    href="#"
    title="[object Object]"
  >
    <span>
      Animals
    </span>
  </a>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    title="Reptiles"
    type="button"
  >
    Reptiles
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <a
    class="euiLink euiLink--subdued euiBreadcrumb"
    href="#"
    title="Boa constrictor"
  >
    Boa constrictor
  </a>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
    title="Edit"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props max doesn't break when max exceeds the number of breadcrumbs 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--truncate euiBreadcrumbs--responsive"
>
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    title="Animals"
    type="button"
  >
    Animals
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    title="Reptiles"
    type="button"
  >
    Reptiles
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    title="Boa constrictor"
    type="button"
  >
    Boa constrictor
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
    title="Edit"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props max renders 1 item 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--truncate euiBreadcrumbs--responsive"
>
  <div
    class="euiBreadcrumb euiBreadcrumb--collapsed"
  >
    …
  </div>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
    title="Edit"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props max renders 2 items 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--truncate euiBreadcrumbs--responsive"
>
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    title="Animals"
    type="button"
  >
    Animals
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <div
    class="euiBreadcrumb euiBreadcrumb--collapsed"
  >
    …
  </div>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
    title="Edit"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props max renders 3 items 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--truncate euiBreadcrumbs--responsive"
>
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    title="Animals"
    type="button"
  >
    Animals
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <div
    class="euiBreadcrumb euiBreadcrumb--collapsed"
  >
    …
  </div>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    title="Boa constrictor"
    type="button"
  >
    Boa constrictor
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
    title="Edit"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props mutiple popover is rendered 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--truncate euiBreadcrumbs--responsive"
>
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    title="Animals"
    type="button"
  >
    Animals
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <div
    aria-label="aria-label"
    class="euiPopover euiPopover--anchorDownCenter testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <div
      class="euiPopover__anchor"
    >
      <button />
    </div>
  </div>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    title="Boa constrictor"
    type="button"
  >
    Boa constrictor
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <div
    aria-label="aria-label"
    class="euiPopover euiPopover--anchorDownCenter testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <div
      class="euiPopover__anchor"
    >
      <button />
    </div>
  </div>
</nav>
`;

exports[`EuiBreadcrumbs props responsive is rendered 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--truncate euiBreadcrumbs--responsive"
>
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    title="Animals"
    type="button"
  >
    Animals
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    title="Reptiles"
    type="button"
  >
    Reptiles
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    title="Boa constrictor"
    type="button"
  >
    Boa constrictor
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
    title="Edit"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props truncate is rendered 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--truncate euiBreadcrumbs--responsive"
>
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    title="Animals"
    type="button"
  >
    Animals
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    title="Reptiles"
    type="button"
  >
    Reptiles
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    title="Boa constrictor"
    type="button"
  >
    Boa constrictor
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
    title="Edit"
  >
    Edit
  </span>
</nav>
`;
